fdo#66646: fix paste special with empty cells

Change-Id: I5323645f3b045574f3d02a895fbe309b52b2ca3d